--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,31 +15,7 @@
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": {
-				"kind": "test",
-				"isDefault": true
-			},
-			"detail": "compiler: C:\\Program Files\\LLVM\\bin\\clang++.exe"
-		},
-		{
-			"type": "cppbuild",
-			"label": "C/C++: clang++.exe build active file",
-			"command": "C:\\Program Files\\LLVM\\bin\\clang++.exe",
-			"args": [
-				"-fcolor-diagnostics",
-				"-fansi-escape-codes",
-				"-g",
-				"${file}",
-				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${workspaceFolder}\\build\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
